add auth swag
